--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,50 @@
-.Resume{
+.container{
   width:100%;
 }
 .Top{
 width:100%;
 height:100px;
-background-color:rgb(50,8,57);
+font-size: 20px;
+background-color:rgb(218, 121, 235);
 text-align: center;
 padding:10px 0 10px 0;
-color: white;
+color: rgb(12, 12, 12);
 }
 .Bottom{
   display:flex;
   width:100%;
   height:900px;
-  background-color:red;
+  background-color:rgb(247, 242, 247);
 
 }
 .Left{
-  width:50%;
+  width:20%;
   height:100%;
-  background-color:rgb(128,94,160);
+  background-color:rgb(79, 74, 74);
+  text-align: start;
+  color: rgb(17, 17, 17);
 }
 .Rigth{
-  width:50%;
+  width:90%;
   height:100%;
   background-color:rgb(148,184,201);
+  
+
+}
+ul {
+  list-style-type: none;
+  margin: 5%;
+  padding: 0;
+}
+
+li p {
+  display: block;
+  width: 60px;
+  background-color: #dddddd;
+
+
+}
+.nav{
+  font-size: 20px;
+  text-decoration-color: white;
 }
